Fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-
+body {
+  overflow-x: hidden;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
